# onscripter-libretro_fork

./: .gitignore  README.md  site_onscripter.txt
onscripter-libretro/: CMakeLists_onscripter-en.txt  CMakeLists_onscripter-jh.txt  CMakeLists_onscripter-jh_ori.txt  CMakeLists_onscripter.txt  CMakeLists_v2.txt  Makefile  Makefile-en.common  Makefile-jh.common  Makefile-jh_ori.common  Makefile.common  README  README.md  deps.scm  gitlab-ci.yml.txt  libretro.cpp  update-deps.sh
onscripter-libretro-0.1/: Makefile  Makefile-jh.common  Makefile-jh_ori.common  Makefile.common  README  deps.scm  libretro.cpp
onscripter-libretro-0.1/jni/: Android.mk  build_with_windows.bat
onscripter-libretro-0.1/sdl-libretro/: SDL_libretro.h  video.c
onscripter-libretro-0.2/: Makefile  Makefile-jh.common  Makefile-jh_ori.common  Makefile.common  README.md  gitmodules.txt  libretro.cpp  update-deps.sh
onscripter-libretro-0.2/deps.overlay/libjpeg-turbo/: jconfigint.h
onscripter-libretro-0.2/sdl-libretro/: SDL_libretro.h  audio.c  events.c
onscripter-libretro-0.3/: .editorconfig  CMakeLists.txt  Makefile  Makefile-jh.common  Makefile.common  README.md  deps.scm  libretro.cpp  update-deps.sh
onscripter-libretro-0.3/sdl-libretro/: SDL_image.cpp  SDL_libretro.h  audio.c  events.c  video.c
onscripter-libretro/deps.overlay/libjpeg-turbo/: jconfig.h
onscripter-libretro/jni/: Android_command_line_too_long.mk  Android_onscripter-en.mk  Android_onscripter-jh.mk  Android_onscripter-jh_ori.mk  Android_onscripter.mk  Application.mk  build_with_windows.bat
onscripter-libretro/sdl-libretro/: SDL_libretro.h  audio.c  events.c
onscripter-libretro_wuffs/: CMakeLists.txt  Makefile  Makefile.common  README.md  build-miyoomini.sh  deps.scm  libretro.cpp  pscript.scm
onscripter-libretro_wuffs/deps.overlay/libogg/include/ogg/: os_types.h
onscripter-libretro_wuffs/jni/: Android.mk
onscripter-libretro_wuffs/sdl-libretro/: SDL_libretro.h  SDL_ttf.c  audio.c  events.c
onsyuri_libretro/: CMakeLists.txt  Makefile  Makefile-jh.common  Makefile-yuri.common  Makefile.common  SDL_HINT_AUDIODRIVER.txt  SDL_libretro.c  libretro.cpp  readme_macmini_build.txt  todo.txt
onsyuri_libretro/jni/: Android.mk  Application.mk
onsyuri_libretro/jni/use_include_not_recommended/: Android.mk
out_bin/action_pi_not_by_me_20250524/: readme.txt
out_bin/action_pi_not_by_me_20250524/roms_ports_add_by_me/: onscripter.sh
out_bin/action_pi_not_by_me_20250524/usr_bin/: onsyuri
out_bin/action_pi_not_by_me_20250524/usr_share_libretro_info/: onsyuri_libretro.info
out_bin/arkos_aarch64_not_by_me/: readme.txt
out_bin/build_20241123/: onscripter_jh_libretro.info
out_bin/build_yuri_20250914_macmini/: onsyuri_libretro.dylib
out_bin/build_yuri_20250920_visionfive2/: readme.txt  readme_ra_vf2_v1.txt
out_bin/build_yuri_android_20241113/: test_result.txt
out_bin/build_yuri_test_tsp_rg28xx_20241117/: todo.txt  trimui_smart_pro_no_audio_bug.txt
out_bin/game_kiddy_bubble_not_by_me_20250116/: readme.txt
out_bin/miyoo_a30_good_20240715/: readme.txt
out_bin/miyoo_flip_not_by_me_20250111/: readme.txt
out_bin/miyoo_mini_not_by_me_20250110/: readme.txt
out_bin/miyoo_mini_plus_20240715/: readme.txt
out_bin/miyoo_mini_plus_20240715/Emu_ONS/: launch2.sh
out_bin/muos_arm64_20241213_not_by_me/: readme.txt  site.txt
out_bin/r36h_original_not_by_me_20250417/: onsyuri_libretro.info
out_bin/r36s_thirdparty_arkos_not_by_me_20250517/: readme.txt
out_bin/rg28xx_20240715/: readme.txt
out_bin/rg28xx_original_not_by_me/: readme.txt
out_bin/rgb10_thirdparty_arkos_not_by_me_20250511/: origin_same_as_r36s.txt
out_bin/rgb10_thirdparty_jelos_not_by_me_20250525/: readme.txt
out_bin/rgb10_thirdparty_jelos_not_by_me_20250525/SYSTEM_usr_config_onscripter/: nsadec  onscripter  sarconv
out_bin/rgb10max3_not_by_me_20250502/: readme.txt  seems_same_as_kk_mod_and_rgh_mod.txt
out_bin/rgb10max3_not_by_me_20250502/usr_config_onscripter/: gamecontrollerdb.txt  onscripter.bak  onscripter.gptk
out_bin/rgb10max3_thridparty_jelos_not_by_me_20250525/: readme.txt
out_bin/rgb10max3_thridparty_jelos_not_by_me_20250525/usr_bin/: start_onscripter.sh
out_bin/rgb10max3_thridparty_jelos_not_by_me_20250525/usr_config_onscripter/: Scan_for_new_games.ons  log.txt  nsaconv  sardec
out_bin/rgb10x_original_not_by_me_20241005/: readme.txt
out_bin/rgb10x_thirdparty_arkos_not_by_me_20250517/: readme.txt
out_bin/rgb10x_thirdparty_jelos_not_by_me_20250517/: readme.txt
out_bin/trimui_bilibili_not_by_me/: readme.txt
out_bin/trimui_bilibili_not_by_me/1.1.0/: readme.txt
out_bin/trimui_bilibili_not_by_me/1.1_base_trimui_smart_pro_s/: readme.txt
out_bin/trimui_bilibili_not_by_me/1.4_base_trimui_brick/: readme.txt
out_bin/trimui_bilibili_not_by_me/1.4_base_trimui_smart_pro/: readme.txt
out_bin/trimui_brick_tieba_not_by_me/: readme.txt  trimui-brick_emulator_mod.7z
out_bin/trimui_crossmix_not_by_me/: readme.txt
out_bin/v90s_not_by_me_20250604/: readme.txt
out_bin/v90s_not_by_me_20250604/usr_bin/: onsyuri
out_bin/v90s_thirdparty_plumos_not_by_me_20250615/: readme.txt
out_bin/v90s_thirdparty_plumos_not_by_me_20250615/boot/: batocera-boot.conf
out_bin/v90s_thirdparty_plumos_not_by_me_20250615/userdata_system/: batocera.conf  custom.sh  data.version  device_info_Batocera_RGBXX.txt  machine-id
out_bin/x35h_not_by_me_20260115/JELOS_EE-RK356x.aarch64-X35H_20250116/: readme.txt
out_bin/zpgpro_not_by_me_20250519/: readme.txt
out_bin/zpgpro_not_by_me_20250519/zpgpro/: about.txt  onsman.txt  onspaly.sh
test_suite/: readme.txt  readme_name.txt
test_suite/not_used_not_by_me/: fesbeta.lzh  nscr.lzh  nscrinst.lzh  nscrold.lzh  nsdshow.lzh  nsluasample.lzh  nsogg.lzh  readme.txt  reversi.lzh
test_suite/not_used_not_by_me_2/john-he/: onscr-win32-070206-zh01.7z  onscr-win32-070826a-zh00.7z  onscr-win32-080121-zh03-big5.7z  onscr-win32-080121-zh03-gbk.7z  onscr-win32-080121-zh03-sjis.7z
very_old_version/: onscripter-en-20080823-src.tar.bz2  onscripter-en-20110628-src.tar.bz2  tachi_image_png_mask_bug.txt
(+11 files in other folders)
